# franko2arabic

./: LICENSE  README.md  example_use.py  pyproject.toml
franko2arabic/: __init__.py  cli.py  main.py
franko2arabic/core/: __init__.py  config.py  lang_detect.py  mapper.py  normalizer.py  phrases.py  rules.py  tokenizer.py  transliterator.py  types.py
franko2arabic/data/: base_mapping.json  egyptian_words.json  phrases_eg.json
franko2arabic/tests/: test_basic.py
