[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "franko2arabic"
version = "0.1.0"
description = "Franco/Franko Arabic to Arabic script transliteration"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["franko2arabic*"]
